[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphnav"
version = "1.2.0"
description = "Knowledge-graph context injection for AI coding agents in monorepos"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["graphifyy>=0.8", "mcp>=1.2"]

[project.scripts]
graphnav = "codex_graph.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_graph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
